--- a/src/app/components/update-properity-advertising/update-properity-advertising.component.css
+++ b/src/app/components/update-properity-advertising/update-properity-advertising.component.css
@@ -1,7 +1,7 @@
 
 
 
-.apply-page-header {
+/* .apply-page-header {
 
   background-image: url("../../../assets/17828.jpg") ;
   background:#353535;
@@ -47,7 +47,7 @@
   grid-template-columns: 65% 30%;
   gap: 70px;
 }
-
+ */
 
 
 
