--- a/src/app/users/component/owner/owner.component.css
+++ b/src/app/users/component/owner/owner.component.css
@@ -1,161 +1,13 @@
-*{
-  font-family: cairo;
-  box-sizing: border-box;
-}
-.container{
-  margin-top:100px;
-}
 
-.counter {
-  display: block;
-  font-size: 1.5rem;
-  font-weight: 700;
-  color: #fbefef;
-  line-height: 28px
-  }
-.counter-box {
-display: block;
-height:160px;
-background: #fe6f41;
-padding: 40px 20px 37px;
-text-align: center;
-transition: all 0.5s ease-in-out;
-cursor: pointer;
-border-radius: 2em;
-
-}
-.counter-box:hover{
-  background-color: #353535;
-}
-.card-title{
-
-  font-family: cairo;
-}
-
-.counter-box p {
-  font-family: cairo;
-margin: 5px 0 0;
-padding: 0;
-color: #fff;
-font-size: 18px;
-font-weight: 500
-}
-
-.counter-box i {
-font-size: 60px;
-margin: 0 0 15px;
-color: #fff
-}
-
-
-
-.counter-box.colored {
-    background: #fe6f41;
-}
-.send {
-  width:100%;
-  padding: 15px 20px;
-  font-size: 16px;
-  font-weight: 700;
-  border-radius: 20px;
-  color: #ffff;
-  border: none;
-  text-transform: uppercase;
-  transition: all 0.5s ease-in-out;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
-  -webkit-transition: all 0.5s ease-in-out;
-  -moz-transition: all 0.5s ease-in-out;
-  -ms-transition: all 0.5s ease-in-out;
-  -o-transition: all 0.5s ease-in-out;
-  background: #353535;
-}
-.send:hover {
-  background: #fe6f41;
-  color: #fff;
-}
-
-
-/* ---------------------------- */
-body {
-  background-color:  #eee;
-}
-.title {
-
-    margin-bottom: 50px;
-    text-transform: uppercase;
-}
-
-.card-block {
-    font-size: 1em;
-    position: relative;
-    margin: 0;
-    padding: 1em;
-    border: none;
-    border-top: 1px solid rgba(34, 36, 38, .1);
-    box-shadow: none;
-
-}
-.card {
-    font-size: 1em;
-    overflow: hidden;
-    padding: 5;
-    border: none;
-    border-radius: .28571429rem;
-    box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
-    margin-top:20px;
-}
-
-.carousel-indicators li {
-    border-radius: 12px;
-    width: 12px;
-    height: 12px;
-    background-color: #404040;
-}
-.carousel-indicators li {
-    border-radius: 12px;
-    width: 12px;
-    height: 12px;
-    background-color: #404040;
-}
-.carousel-indicators .active {
-    background-color: white;
-    max-width: 12px;
-    margin: 0 3px;
-    height: 12px;
-}
-.carousel-control-prev-icon {
- background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
-}
-
-.carousel-control-next-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;}
-
-
-
-.btn {
-  margin-top: auto;
-}
-
-.counter-box.colored p,
-.counter-box.colored i,
-.counter-box.colored .counter {
-color: #fff
-}
-
-.height{
+/* .height{
   height:100vh;
-}
-.image{
+} */
+/* .image{
   width:100%;
   height:100%;
   position:static;
-}
-.cardheight{
-  padding:1%;
-}
+} */
+
 /* .backcolor
 {
   border-left: 5px solid #E71700;
@@ -226,7 +78,7 @@ a{
 }
 .add{
   display: block;
-  /* width: 100% !important;; */
+  width: 100% !important;;
   padding: 30px 20px;
 font-size: 1.5em;
 font-weight: 600;
@@ -253,7 +105,7 @@ color: #fff;
 }
 .gradient-form
 {
-  height:100vh;
+  height:80vh;
   overflow: hidden;
   background-image: url(src\assets\rmb-coins-stacked-front-housing-model-house-prices-house-buying-real-estate-mortgage-concept.jpg);
   background-position: center;
