--- a/src/app/users/component/owner/owner.component.html
+++ b/src/app/users/component/owner/owner.component.html
@@ -1,12 +1,14 @@
 <!-- <img src=""> -->
-<div class="container gradient-form">
-  <div class="row g-0">
-    <div class="col-sm-12">
-      <a routerLink="/addProperity" class="add col-sm-12">إضافة اعلان</a>
+<div class="container  gradient-form">
+  <div class="row  w-100 g-0">
+    <div class="col-sm-12 w-100 ">
+      <div class="row">
+      <a routerLink="/addProperity" class="add col-sm-12 w-100">إضافة اعلان</a>
     </div>
+    </div>
+
+
     <div class="col-sm-12">
-      <div class="col-sm-12">
-        <div class="container m-0 w-100">
           <div class="row">
             <div
               class="col-sm-12 p-3 backcolor-one col-md-3 dash"
@@ -33,12 +35,12 @@
               class="col-sm-12 p-3 backcolor-three col-md-3 dash"
               (click)="payedRending()"
             >
-              <span>2</span>
-              <p>إعلانات</p>
+              <span>{{payedads}}</span>
+              <p>عقارات مؤجره بالدفع</p>
             </div>
           </div>
         </div>
-      </div>
-    </div>
+
+
   </div>
 </div>
