--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,5 @@
 
  <app-side-bar> </app-side-bar>   
 <router-outlet> </router-outlet>
-<h1> helllo</h1>
+<!-- <h1> helllo</h1> -->
 <!-- <app-footer> </app-footer> -->
