--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -62,7 +62,7 @@
 
   </div> 
  
-  <app-footer> </app-footer> 
+  <!-- <app-footer> </app-footer>  -->
   
 </div>
 <div class="justify-content-center align-items-center" *ngIf="loading">
