--- a/src/app/admin/component/adminhome/adminhome.component.html
+++ b/src/app/admin/component/adminhome/adminhome.component.html
@@ -1,45 +1,37 @@
-<div class="container ">
-  <div class="row justify-content-center">
-    <div class="four col-sm-6 col-md-2 my-1">
-      <div class="counter-box">
-        <span class="counter">500</span>
-        <p>المستخدمين</p>
+<div class="container gradient-form
+">
+  <div class="row g-10px">
+    <div class="col-sm-12 col-md-5">
+      <div class="row ">
+        <div class="col-sm-12 user">
+          <p  class=" one handel"> الملاك<span class="nimbers">{{allRenters}}</span></p></div>
+        <div class="col-sm-12 user"><p class="handel two">المستاجرين<span class="nimbers">{{allRenters}}</span></p></div>
+        <div class="col-sm-12 user"><p class="handel three">المسؤلين<span class="nimbers">{{allRenters}}</span></p></div>
+        <div class="col-sm-12 user"><p class="handel four">المحظورين<span class="nimbers">{{allRenters}}</span></p></div>
       </div>
     </div>
+    <div class="col-sm-12 col-md-6 parent ">
+      <div class="row w-100 control gap g-10px">
+        <div class=" ads col-sm-12 col-md-5">
+          <p>{{allRenters}}</p>
+          <p class="fonthandel">الاعلانات المقبولة</p>
+        </div>
+        <div class="ads col-sm-12 col-md-5">
+          <p>{{allRenters}}</p>
+          <p class="fonthandel">الاعلانات المرفوضة</p>
 
 
-    <div class="four col-sm-6 col-md-2 my-1">
-      <div class="counter-box">
-        <span class="counter">500</span>
-        <p>الملاك</p>
+        </div>
+        <div class=" ads col-sm-12 col-md-5">
+          <p>{{allRenters}}</p>
+          <p class="fonthandel">الاعلانات الحديثة</p>
+        </div>
+        <div class=" ads col-sm-12 col-md-5">
+          <p>{{allRenters}}</p>
+          <p class="fonthandel">الاعلانات المدفوعه</p>
+        </div>
       </div>
-    </div>
-    <div class="four col-sm-6 col-md-2 my-1">
-      <div class="counter-box">
-        <span class="counter">500</span>
-        <p>الادمن</p>
-      </div>
-    </div>
 
-    <div class="four col-sm-6 col-md-2 my-1">
-      <div class="counter-box">
-        <span class="counter">500</span>
-        <p>الاعلانات</p>
-      </div>
-    </div>
-
-    <div class="four col-sm-6 col-md-2 my-1">
-      <div class="counter-box">
-        <span class="counter">500</span>
-        <p>المستخدمين المحظورين</p>
-      </div>
-    </div>
-    <div class="text-center w-75 mt-5">
-      <button class="send" type="submit" routerLink="/AddProperityComponent">
-إضافة ادمن      </button>
     </div>
   </div>
 </div>
-
-
-
