--- a/src/app/components/add-properity/add-properity.component.html
+++ b/src/app/components/add-properity/add-properity.component.html
@@ -72,15 +72,15 @@
 
             <strong
               *ngIf="addproperity.controls['description'].errors['minlength']"
-              >الاسم الاول يجب الا يقل عن حرفان</strong>
+              >عنوان  يجب الا يقل عن عشرة احرف</strong>
 
             <strong
               *ngIf="addproperity.controls['description'].errors['maxlength']"
-              >الاسم الاول يجب الا يزيد عن عشرة احرف</strong
+              >عنوان  يجب الا يزيد عن 200 احرف</strong
             >
             <strong
               *ngIf="addproperity.controls['description'].errors['pattern']"
-              >الاسم الاول يجب ان يكون عربى</strong
+              ></strong
             >
           </div>
     </div>
