--- a/src/app/admin/component/adminhome/adminhome.component.css
+++ b/src/app/admin/component/adminhome/adminhome.component.css
@@ -1,144 +1,184 @@
+
 *{
-  font-family: cairo;
+  box-sizing: border-box;
 }
-.container{
-  margin-top:100px;
-}
-
-.counter {
-  display: block;
-  font-size: 32px;
-  font-weight: 700;
-  color: #fbefef;
-  line-height: 28px
-  }
-.counter-box {
-display: block;
-height:150px;
-background: #fe6f41;
-padding: 40px 20px 37px;
-text-align: center;
-transition: all 0.5s ease-in-out;
-cursor: pointer;
-
-}
-.counter-box:hover{
-  background-color: #353535;
-}
-.card-title{
-
-  font-family: cairo;
-}
-
-.counter-box p {
-  font-family: cairo;
-margin: 5px 0 0;
-padding: 0;
-color: #fff;
-font-size: 18px;
-font-weight: 500
-}
-
-.counter-box i {
-font-size: 60px;
-margin: 0 0 15px;
-color: #fff
-}
-
-
-
-.counter-box.colored {
-    background: #fe6f41;
-}
-.send {
+/* .image{
   width:100%;
-  padding: 15px 20px;
-  font-size: 16px;
-  font-weight: 700;
-  border-radius: 20px;
-  color: #ffff;
-  border: none;
-  text-transform: uppercase;
+  height:100%;
+  position:static;
+} */
+
+/* .backcolor
+{
+  border-left: 5px solid #E71700;
+  background-color:#fff ;
+  color:white;
+} */
+/* .backcolor-one
+{
+  border-left: 5px solid #01AB6B;
+  background-color:#fff ;
+  color:white;
+} */
+.dash{
+  color:#fff;
+  text-align: center;
+  font-size: 13px;
+  font-weight: 800;
+  cursor: pointer;
+  position: relative;
+  background-color:#383838 ;
+}
+.dash::after{
+  content:'';
+  width:0%;
+  height:0%;
+border:0 solid #fde6de ;
+  position: absolute;
+  top:0;
+  right:0;
   transition: all 0.5s ease-in-out;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  -ms-border-radius: 20px;
-  -o-border-radius: 20px;
+
+-webkit-transition: all 0.5s ease-in-out;
+-moz-transition: all 0.5s ease-in-out;
+-ms-transition: all 0.5s ease-in-out;
+-o-transition: all 0.5s ease-in-out;
+
+}
+.dash:hover.dash::after{
+  height:100%;
+  width:100%;
+  border-top:5px solid #fde6de ;
+  /* border-bottom:2px solid #fde6de ; */
+
+  color:#383838;
+
+}
+/* .backcolor-two
+{
+  border-left: 5px solid #005EEC;
+  border-bottom: 5px solid #005EEC;
+
+} */
+
+span{
+  color:#FE6F41;
+}
+/* .backcolor-three
+{
+  justify-content: center;
+  align-content: center;
+  border-left: 5px solid #383838;
+    background-color:#fff ;
+
+} */
+a{
+  font-size: 20px;
+  font-weight: 800;
+}
+.add{
+  display: block;
+  width: 100% !important;;
+  padding: 30px 20px;
+font-size: 1.5em;
+font-weight: 600;
+text-align: center;
+/* border-radius: 20px; */
+color: #ffff;
+border:none;
+transition: all 0.5s ease-in-out;
+
+-webkit-transition: all 0.5s ease-in-out;
+-moz-transition: all 0.5s ease-in-out;
+-ms-transition: all 0.5s ease-in-out;
+-o-transition: all 0.5s ease-in-out;
+background: #FE6F41 !important;
+caret-color:#FE6F41;
+
+}
+
+
+
+.add:hover {
+background: #353535 !important;
+color: #fff;
+}
+.gradient-form
+{
+  margin-top: 30px;
+  height:80vh;
+  overflow: hidden;
+  /* background-image: url(src\assets\rmb-coins-stacked-front-housing-model-house-prices-house-buying-real-estate-mortgage-concept.jpg); */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  align-items: center !important;
+  justify-content: center !important;
+}
+
+.content-center{
+  justify-content: center;
+  align-items: center;
+
+}
+.user{
+  width:100%;
+  padding:15px;
+  margin-bottom: 5px;
+  font-family: cairo;
+  position:relative;
+  background-color: #f2f2f2;
+  transition: all 0.5s ease-in-out;
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
   -ms-transition: all 0.5s ease-in-out;
   -o-transition: all 0.5s ease-in-out;
-  background: #353535;
-}
-.send:hover {
-  background: #fe6f41;
-  color: #fff;
-}
-
-
-/* ---------------------------- */
-body {
-  background-color:  #eee;
-}
-.title {
-
-    margin-bottom: 50px;
-    text-transform: uppercase;
-}
-
-.card-block {
-    font-size: 1em;
-    position: relative;
-    margin: 0;
-    padding: 1em;
-    border: none;
-    border-top: 1px solid rgba(34, 36, 38, .1);
-    box-shadow: none;
 
 }
-.card {
-    font-size: 1em;
-    overflow: hidden;
-    padding: 5;
-    border: none;
-    border-radius: .28571429rem;
-    box-shadow: 0 1px 3px 0 #d4d4d5, 0 0 0 1px #d4d4d5;
-    margin-top:20px;
+.handel{
+  display: flex;
+  justify-content: space-around;
+}
+.nimbers{
+  font-size: 25px;
+
+}
+.icon{
+  position:absolute;
+  top:0;
+  left: 0%;
+  font-size:20px;
+  /* display: block; */
 }
 
-.carousel-indicators li {
-    border-radius: 12px;
-    width: 12px;
-    height: 12px;
-    background-color: #404040;
-}
-.carousel-indicators li {
-    border-radius: 12px;
-    width: 12px;
-    height: 12px;
-    background-color: #404040;
-}
-.carousel-indicators .active {
-    background-color: white;
-    max-width: 12px;
-    margin: 0 3px;
-    height: 12px;
-}
-.carousel-control-prev-icon {
- background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
-}
-
-.carousel-control-next-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23fff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;}
+.ads{
+height: 130px;
+  /* gap: 10px !important; */
+  background-color:#FE6F41;
+padding:10px;
+display:flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
 
 
-
-.btn {
-  margin-top: auto;
+}
+.parent{
+/* border: 2px solid #353535; */
+justify-content: center !important;
+align-items: center !important;}
+.gap{
+  gap: 10px !important;
 }
 
-.counter-box.colored p,
-.counter-box.colored i,
-.counter-box.colored .counter {
-color: #fff
+.control{
+  align-items: center !important;
+  justify-content: center !important;
+  /* padding: 10px; */
+  /* background-color: #353535; */
+}
+.fonthandel{
+  font-family: cairo;
+  color: #f2f2f2;
+  font-size: 20px;
 }
