--- a/src/app/shared/component/side-bar/side-bar.component.html
+++ b/src/app/shared/component/side-bar/side-bar.component.html
@@ -5,11 +5,11 @@
        [src] ="image"/>
       <!-- <mat-icon>camera_alt</mat-icon> -->
       <h2 class="name">{{name}}</h2>
-      
-  
+
+
       <mat-divider></mat-divider>
       <ul class="nav flex-column" *ngIf="isAdmin ||  isSuperAdmin">
-         
+
         <li class="nav-item">
           <a class="nav-link" routerLink="allRenters">
             <span data-feather="file"></span>
@@ -48,11 +48,11 @@
         </li>
       </ul>
 
-     
-  
+
+
       <mat-divider></mat-divider>
       <ul class="nav flex-column">
-         
+
         <li class="nav-item" *ngIf="isRenter">
           <a class="nav-link" routerLink="userfavourites">
             <span data-feather="file"></span>
@@ -73,12 +73,33 @@
         </li>
       </ul>
 
-     
 
-  
+<!-- owner  -->
       <mat-divider></mat-divider>
-  
-     
+      <!-- <ul class="nav flex-column">
+
+        <li class="nav-item" *ngIf="isRenter">
+          <a class="nav-link" routerLink="userfavourites">
+            <span data-feather="file"></span>
+            المفضله
+          </a>
+        </li>
+        <li class="nav-item">
+          <button class="btn btn-toggle align-items-center rounded collapsed" data-bs-toggle="collapse" data-bs-target="#dashboard-collapse" aria-expanded="false">
+            الحساب
+          </button>
+          <div class="collapse" id="dashboard-collapse">
+            <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
+              <li><a routerLink="" style="text-decoration: none;" class="link-dark rounded">تعديل البيانات</a></li>
+              <li><a routerLink="" style="text-decoration: none;" class="link-dark rounded">تعديل كلمة السر</a> </li>
+
+            </ul>
+          </div>
+        </li>
+      </ul> -->
+      <mat-divider></mat-divider>
+
+
     </mat-sidenav>
     <mat-sidenav-content >
       <button class="navbar-toggler  mt-0 d-md-none collapsed " type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu"
@@ -87,16 +108,19 @@
       (click)="sidenav.toggle()"
     >
     <span>  قائمة التحكم  <mat-icon *ngIf="!sidenav.opened" class="mx-2" style="position:relative; top:5px;">apps</mat-icon></span>
-<!-- 
+<!--
       <mat-icon *ngIf="!sidenav.opened"> apps </mat-icon>
       <mat-icon *ngIf="sidenav.opened"> apps </mat-icon> -->
-      
-    </button> 
+
+    </button>
       <div class="content ">
-     
+
         <router-outlet></router-outlet>
       </div>
-      
+
 
     </mat-sidenav-content>
+
+
   </mat-sidenav-container>
+
