--- a/src/app/admin/component/adminhome/adminhome.component.html
+++ b/src/app/admin/component/adminhome/adminhome.component.html
@@ -1,13 +1,20 @@
-<div class="container gradient-form
+<!-- <div class="container gradient-form
 ">
   <div class="row g-10px">
     <div class="col-sm-12 col-md-5">
       <div class="row ">
         <div class="col-sm-12 user">
-          <p  class=" one handel"> الملاك<span class="nimbers">{{allRenters}}</span></p></div>
+          <p  class=" one handel" > الملاك
+          </p>
+          <p class="nimbers">{{allRenters}}</p>
+        </div>
         <div class="col-sm-12 user"><p class="handel two">المستاجرين<span class="nimbers">{{allRenters}}</span></p></div>
         <div class="col-sm-12 user"><p class="handel three">المسؤلين<span class="nimbers">{{allRenters}}</span></p></div>
-        <div class="col-sm-12 user"><p class="handel four">المحظورين<span class="nimbers">{{allRenters}}</span></p></div>
+        <div class="col-sm-12 user">
+          <div class="progress">
+            <div class="progress-bar bg-danger" role="progressbar" style="width: {{allRenters}}%" aria-valuenow="" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+          <p class="handel four">المحظورين<span class="nimbers">{{allRenters}}</span></p></div>
       </div>
     </div>
     <div class="col-sm-12 col-md-6 parent ">
@@ -34,4 +41,80 @@
 
     </div>
   </div>
+</div> -->
+<div class="container gradient-form">
+  <div class="alert alert-success alert-dismissible fade show" role="alert" *ngIf="message">
+    تمت اضافة مسؤول بنجاح
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+  <div class="row content-center">
+    <div class="col-sm-12 content-center">
+      <div class="col-sm-10">
+        <h1 class="d-flex justify-content-center align-items-center" style="background-color:#383838;padding:10px;border-radius:10px; color:#fff;">الاعلانات</h1>
+       <div class="row w-100 handel justify-content-center align-items-center">
+        <div class="col-sm-12 col-md-2   d-flex justify-content-center align-items-center py-5 mt-2" style="background-color: #02D1A6;border-radius:10px; flex-direction: column;">
+          <p style="font-size: 25px; color:#fff;">{{acceptedAds}}</p>
+          <p style="font-size: 25px; color:#fff; ">المقبولة</p>
+
+        </div>
+
+        <div class="col-sm-12 col-md-2  d-flex justify-content-center align-items-center py-5 mt-2" style="background-color: #FFD07E;border-radius:10px;flex-direction: column;">
+          <p style="font-size: 25px; color:#fff;">{{pendingdAds}}</p>
+          <p style="font-size: 20px; color:#fff;"> معلقة</p>
+
+        </div>
+        <div class="col-sm-12 col-md-2  d-flex justify-content-center align-items-center py-5 mt-2" style="background-color: #FF8876;border-radius:10px;flex-direction: column;" (click)="payed()">
+          <p style="font-size: 25px; color:#fff;">{{payedAds}}</p>
+          <p style="font-size: 20px; color:#fff;">  المدفوعه</p>
+
+        </div>
+        <div class="col-sm-12 col-md-2  d-flex justify-content-center align-items-center py-5 mt-2" style="background-color: #31647A;border-radius:10px;flex-direction: column;">
+          <p style="font-size: 25px; color:#fff;">{{rejectedAds}}</p>
+          <p style="font-size: 25px; color:#fff;">المرفوضة</p>
+
+        </div>
+       </div>
+
+      </div>
+    </div>
+    <div class="col-sm-12 mt-5 content-center">
+      <div class="col-sm-10">
+        <h1 class="d-flex justify-content-center align-items-center" style="background-color:#383838;padding:10px;border-radius:10px; color:#fff;">المستخدمين</h1>
+       <div class="row w-100 handel justify-content-center align-items-center">
+        <div class="col-sm-12 col-md-2   d-flex justify-content-center align-items-center px-5 py-2 mt-2" style="background-color: #FF8876;border-radius:10px; flex-direction: column;">
+          <p style="font-size: 25px; color:#fff;">{{allowners}}</p>
+          <p style="font-size: 20px;padding: 0 30px !important; color:#fff;">الملاك</p>
+
+        </div>
+        <div class="col-sm-12 col-md-2  d-flex justify-content-center align-items-center px-5 py-2 mt-2" style="background-color: #FF8876;border-radius:10px;flex-direction: column;">
+          <p style="font-size: 25px; color:#fff;">{{allRenters}}</p>
+          <p style="font-size: 20px;padding: 0 30px !important; color:#fff;">المستاجرين</p>
+
+        </div>
+        <div class="col-sm-12 col-md-2  d-flex justify-content-center align-items-center px-5 py-2 mt-2" style="background-color: #FF8876;border-radius:10px;flex-direction: column;">
+          <p style="font-size: 25px; color:#fff;">{{allAdmins}}</p>
+          <p style="font-size: 20px;padding: 0 30px !important; color:#fff;">المسؤلين</p>
+
+        </div>
+        <div class="col-sm-12 col-md-2  d-flex justify-content-center align-items-center px-5 py-2 mt-2" style="background-color: #FF8876;border-radius:10px;flex-direction: column;">
+          <p style="font-size: 25px; color:#fff;">{{allBlocked}}</p>
+          <p style="font-size: 20px;padding: 0 30px !important; color:#fff;">المحظورين</p>
+
+        </div>
+       </div>
+
+      </div>
+    </div>
+  </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
