--- a/src/app/admin/component/add-admin/add-admin.component.html
+++ b/src/app/admin/component/add-admin/add-admin.component.html
@@ -242,7 +242,7 @@
             >
           </div>
         </div>
-        <div class="form-outline mb-4">
+        <!-- <div class="form-outline mb-4">
           <label class="form-label" for="type" id="type">تسجيل كـ</label>
           <select
           formControlName="type"
@@ -268,14 +268,14 @@
               الحقل مطلوب</small
             >
           </div>
-        </div>
+        </div> -->
 
 
         <div class="form-group col-sm-12">
           <button
             class="send form-group col-md-5 w-100 right"
             type="submit"
-            
+
 
             (click)="sign_up()"
           >
