--- a/src/app/admin/component/adminhome/adminhome.component.css
+++ b/src/app/admin/component/adminhome/adminhome.component.css
@@ -117,17 +117,19 @@ color: #fff;
 }
 
 .content-center{
-  justify-content: center;
-  align-items: center;
+  justify-content: center !important;
+  align-items: center !important;
 
 }
 .user{
   width:100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   padding:15px;
   margin-bottom: 5px;
   font-family: cairo;
   position:relative;
-  background-color: #f2f2f2;
   transition: all 0.5s ease-in-out;
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
@@ -137,10 +139,17 @@ color: #fff;
 }
 .handel{
   display: flex;
-  justify-content: space-around;
+  width:100%;
+  gap:20px ;
+  justify-content: center !important;
+  align-items: center !important;
+  align-content: center !important;
 }
 .nimbers{
+  width:30%;
   font-size: 25px;
+  padding: 20px 30px;
+  background-color: #383838;
 
 }
 .icon{
